tests/gabc-dump/should-fail/unclosed-overbrace.gabc
name: unclosed overbrace;
%%
(c4) g(g) h(h[ob:1{])
